# ai-land

./: LICENSE  README.md
backend/: ARCHITECTURE.md  Dockerfile  README.md  pyproject.toml
backend/app/: deps.py  main.py
backend/app/controller/: chat.py
backend/app/core/: config.py  exceptions.py  utils.py
backend/app/models/: chat.py
backend/app/routers/: chat.py
backend/app/services/: chat.py
frontend/ai_land_app/: README.md  pubspec.yaml
frontend/ai_land_app/android/app/: build.gradle.kts
frontend/ai_land_app/ios/Runner/: Info.plist
frontend/ai_land_app/ios/Runner.xcodeproj/: project.pbxproj
frontend/ai_land_app/lib/: app.dart  main.dart
frontend/ai_land_app/lib/features/home/: home_page.dart
frontend/ai_land_app/lib/models/: chat_message.dart
frontend/ai_land_app/lib/providers/common/: shared_preferences.dart  shared_preferences.g.dart  theme_mode_controller.dart  theme_mode_controller.g.dart
frontend/ai_land_app/lib/router/: router.dart  router.g.dart
frontend/ai_land_app/lib/services/: api_service.dart  mcp_service.dart  services.dart
frontend/ai_land_app/lib/widgets/: toast.dart
frontend/ai_land_app/linux/: CMakeLists.txt
frontend/ai_land_app/linux/runner/: my_application.cc
frontend/ai_land_app/macos/Flutter/: GeneratedPluginRegistrant.swift
frontend/ai_land_app/macos/Runner.xcodeproj/: project.pbxproj
frontend/ai_land_app/test/: widget_test.dart
frontend/ai_land_app/web/: index.html  manifest.json
frontend/ai_land_app/windows/: CMakeLists.txt
frontend/ai_land_app/windows/runner/: Runner.rc  main.cpp
(+6 files in other folders)
